--- a/scss/bootstrap-reboot-dark.scss
+++ b/scss/bootstrap-reboot-dark.scss
@@ -11,6 +11,7 @@
  */
 
 @import "functions";
+@import "dark/functions";
 @import "variables";
 @import "variables-alt";  // dark color set is here
 @import "maps";
