--- a/scss/dark/_accordion.scss
+++ b/scss/dark/_accordion.scss
@@ -1,51 +1,17 @@
+//
 // Base styles
+//
 
-.accordion-button {
-  color: $accordion-button-color-alt;
-  background-color: $accordion-button-bg-alt;
-
-  &:not(.collapsed) {
-    color: $accordion-button-active-color-alt;
-    background-color: $accordion-button-active-bg-alt;
-    box-shadow: inset 0 ($accordion-border-width * -1) 0 $accordion-border-color-alt;
-
-    &::after {
-      background-image: escape-svg($accordion-button-active-icon-alt);
-    }
-  }
-
-  // Accordion icon
-  &::after {
-    background-image: escape-svg($accordion-button-icon-alt);
-  }
-
-  &:hover {
-    z-index: 2;
-  }
-
-  &:focus {
-    border-color: $accordion-button-focus-border-color-alt;
-    box-shadow: $accordion-button-focus-box-shadow-alt;
-  }
-}
-
-.accordion-item {
-  background-color: $accordion-bg-alt;
-  border: $accordion-border-width solid $accordion-border-color-alt;
-}
-
-// Flush accordion items
-
-.accordion-flush {
-  .accordion-collapse {
-    border-width: 0;
-  }
-
-  .accordion-item {
-    border-right: 0;
-    border-left: 0;
-
-    &:first-child { border-top: 0; }
-    &:last-child { border-bottom: 0; }
-  }
+.accordion {
+  --#{$prefix}accordion-color: #{color-contrast($accordion-bg-alt)};
+  --#{$prefix}accordion-bg: #{$accordion-bg-alt};
+  --#{$prefix}accordion-border-color: #{$accordion-border-color-alt};
+  --#{$prefix}accordion-btn-color: #{$accordion-button-color-alt};
+  --#{$prefix}accordion-btn-bg: #{$accordion-button-bg-alt};
+  --#{$prefix}accordion-btn-icon: #{escape-svg($accordion-button-icon-alt)};
+  --#{$prefix}accordion-btn-active-icon: #{escape-svg($accordion-button-active-icon-alt)};
+  --#{$prefix}accordion-btn-focus-border-color: #{$accordion-button-focus-border-color-alt};
+  --#{$prefix}accordion-btn-focus-box-shadow: #{$accordion-button-focus-box-shadow-alt};
+  --#{$prefix}accordion-active-color: #{$accordion-button-active-color-alt};
+  --#{$prefix}accordion-active-bg: #{$accordion-button-active-bg-alt};
 }
