--- a/scss/dark/_card.scss
+++ b/scss/dark/_card.scss
@@ -1,36 +1,12 @@
+//
 // Base styles
+//
 
 .card {
-  background-color: $card-bg-alt;
-  border: $card-border-width solid $card-border-color-alt;
-  @include box-shadow($card-box-shadow-alt);
-}
-
-.card-body {
-  color: $card-color-alt;
-}
-
-// Optional textual caps
-
-.card-header {
-  color: $card-cap-color-alt;
-  background-color: $card-cap-bg-alt;
-  border-bottom: $card-border-width solid $card-border-color-alt;
-}
-
-.card-footer {
-  color: $card-cap-color-alt;
-  background-color: $card-cap-bg-alt;
-  border-top: $card-border-width solid $card-border-color-alt;
-}
-
-// Header navs
-
-.card-header-tabs {
-  @if $nav-tabs-link-active-bg != $card-bg {
-    .nav-link.active {
-      background-color: $card-bg-alt;
-      border-bottom-color: $card-bg-alt;
-    }
-  }
+  --#{$prefix}card-border-color: #{$card-border-color-alt};
+  --#{$prefix}card-box-shadow: #{$card-box-shadow};
+  --#{$prefix}card-cap-bg: #{$card-cap-bg-alt};
+  --#{$prefix}card-cap-color: #{$card-cap-color-alt};
+  --#{$prefix}card-color: #{$card-color-alt};
+  --#{$prefix}card-bg: #{$card-bg-alt};
 }
