--- a/scss/dark/_helpers.scss
+++ b/scss/dark/_helpers.scss
@@ -1,9 +1,10 @@
-// @import "helpers/clearfix";  // no colors here
+// clearfix - no colors
+@import "helpers/color-bg";
 @import "helpers/colored-links";
-// @import "helpers/ratio";  // no colors here
-// @import "helpers/position";  // no colors here
-// @import "helpers/stacks";  // no colors here
-// @import "helpers/visually-hidden";  // no colors here
-// @import "helpers/stretched-link";  // no colors here
-// @import "helpers/text-truncation";  // no colors here
+// ratio - no colors
+// position - no colors
+// stacks - no colors
+// visually-hidden - no colors
+// stretched-link - no colors
+// text-truncation - no colors
 @import "helpers/vr";
