--- a/scss/dark/_images.scss
+++ b/scss/dark/_images.scss
@@ -1,4 +1,7 @@
+//
 // Image thumbnails
+//
+
 .img-thumbnail {
   background-color: $thumbnail-bg-alt;
   border: $thumbnail-border-width solid $thumbnail-border-color-alt;
