--- a/scss/dark/_nav.scss
+++ b/scss/dark/_nav.scss
@@ -1,17 +1,11 @@
+//
 // Base class
+//
 
-.nav-link {
-  color: $nav-link-color-alt;
-
-  &:hover,
-  &:focus {
-    color: $nav-link-hover-color-alt;
-  }
-
-  // Disabled state lightens text
-  &.disabled {
-    color: $nav-link-disabled-color-alt;
-  }
+.nav {
+  --#{$prefix}nav-link-color: #{$nav-link-color-alt};
+  --#{$prefix}nav-link-hover-color: #{$nav-link-hover-color-alt};
+  --#{$prefix}nav-link-disabled-color: #{$nav-link-disabled-color-alt};
 }
 
 //
@@ -19,46 +13,17 @@
 //
 
 .nav-tabs {
-  border-bottom: $nav-tabs-border-width solid $nav-tabs-border-color-alt;
-
-  .nav-link {
-    // background: none;
-    border: $nav-tabs-border-width solid transparent;
-
-    &:hover,
-    &:focus {
-      border-color: $nav-tabs-link-hover-border-color-alt;
-    }
-
-    &.disabled {
-      color: $nav-link-disabled-color-alt;
-      background-color: transparent;
-      border-color: transparent;
-    }
-  }
-
-  .nav-link.active,
-  .nav-item.show .nav-link {
-    color: $nav-tabs-link-active-color-alt;
-    background-color: $nav-tabs-link-active-bg-alt;
-    border-color: $nav-tabs-link-active-border-color-alt;
-  }
+  --#{$prefix}nav-tabs-border-color: #{$nav-tabs-border-color-alt};
+  --#{$prefix}nav-tabs-link-hover-border-color: #{$nav-tabs-link-hover-border-color-alt};
+  --#{$prefix}nav-tabs-link-active-color: #{$nav-tabs-link-active-color-alt};
+  --#{$prefix}nav-tabs-link-active-bg: #{$nav-tabs-link-active-bg-alt};
+  --#{$prefix}nav-tabs-link-active-border-color: #{$nav-tabs-link-active-border-color-alt};
 }
-
 
 //
 // Pills
 //
 
 .nav-pills {
-  // .nav-link {
-  //   background: none;
-  //   border: 0;
-  // }
-
-  .nav-link.active,
-  .show > .nav-link {
-    color: $nav-pills-link-active-color-alt;
-    @include gradient-bg($nav-pills-link-active-bg-alt);
-  }
+  --#{$prefix}nav-pills-link-active-color: #{$nav-pills-link-active-color-alt};
 }
