--- a/scss/dark/_progress.scss
+++ b/scss/dark/_progress.scss
@@ -1,14 +1,7 @@
+
 .progress {
-  background-color: $progress-bg-alt;
-  @include box-shadow($progress-box-shadow-alt);
-}
-
-.progress-bar {
-  color: $progress-bar-color-alt;
-  background-color: $progress-bar-bg-alt;
-}
-
-.progress-bar-striped {
-  // THIS DOES NOTHING
-  // @include gradient-striped();
+  --#{$prefix}progress-bg: #{$progress-bg-alt};
+  --#{$prefix}progress-box-shadow: #{$progress-box-shadow-alt};
+  --#{$prefix}progress-bar-color: #{$progress-bar-color-alt};
+  --#{$prefix}progress-bar-bg: #{$progress-bar-bg-alt};
 }
