--- a/scss/dark/_navbar.scss
+++ b/scss/dark/_navbar.scss
@@ -1,136 +1,39 @@
-// Navbar
-
-// THIS DOES NOTHING
-// .navbar {
-//   @include gradient-bg();
-// }
-
-// Button for toggling the navbar when in its collapsed state
-.navbar-toggler {
-  background-color: transparent; // remove default button style
-  border: $border-width solid transparent; // remove default button style
-
-  // &:focus {
-  //   box-shadow: 0 0 0 $navbar-toggler-focus-width;
-  // }
-}
-
-// Generate series of `.navbar-expand-*` responsive classes for configuring
-// where your navbar collapses.
-// TODO : NB!!!  THIS BREAKS THE MEDIA QUERY GENERATION
-// .navbar-expand {
-//   @each $breakpoint in map-keys($grid-breakpoints) {
-//     $next: breakpoint-next($breakpoint, $grid-breakpoints);
-//     $infix: breakpoint-infix($next, $grid-breakpoints);
 //
-//     // stylelint-disable-next-line scss/selector-no-union-class-name
-//     &#{$infix} {
-//       @include media-breakpoint-up($next) {
-//         .offcanvas {
-//           background-color: transparent;
-//         }
-//       }
-//     }
-//   }
-// }
+// Navbar
+//
 
-// Navbar themes
-.navbar-light {
-  .navbar-brand {
-    color: $navbar-light-brand-color-alt;
-
-    &:hover,
-    &:focus {
-      color: $navbar-light-brand-hover-color-alt;
-    }
-  }
-
-  .navbar-nav {
-    .nav-link {
-      color: $navbar-light-color-alt;
-
-      &:hover,
-      &:focus {
-        color: $navbar-light-hover-color-alt;
-      }
-
-      &.disabled {
-        color: $navbar-light-disabled-color-alt;
-      }
-    }
-
-    .show > .nav-link,
-    .nav-link.active {
-      color: $navbar-light-active-color-alt;
-    }
-  }
-
-  .navbar-toggler {
-    color: $navbar-light-color-alt;
-    border-color: $navbar-light-toggler-border-color-alt;
-  }
-
-  .navbar-toggler-icon {
-    background-image: escape-svg($navbar-light-toggler-icon-bg-alt);
-  }
-
-  .navbar-text {
-    color: $navbar-light-color-alt;
-
-    a,
-    a:hover,
-    a:focus  {
-      color: $navbar-light-active-color-alt;
-    }
-  }
+.navbar {
+  --#{$prefix}navbar-color: #{$navbar-light-color-alt};
+  --#{$prefix}navbar-hover-color: #{$navbar-light-hover-color-alt};
+  --#{$prefix}navbar-disabled-color: #{$navbar-light-disabled-color-alt};
+  --#{$prefix}navbar-active-color: #{$navbar-light-active-color-alt};
+  --#{$prefix}navbar-brand-color: #{$navbar-light-brand-color-alt};
+  --#{$prefix}navbar-brand-hover-color: #{$navbar-light-brand-hover-color-alt};
+  --#{$prefix}navbar-toggler-icon-bg: #{escape-svg($navbar-light-toggler-icon-bg-alt)};
+  --#{$prefix}navbar-toggler-border-color: #{$navbar-light-toggler-border-color-alt};
 }
 
-// White links against a dark background
+//
+// Navbar nav
+//
+
+.navbar-nav {
+  --#{$prefix}nav-link-color: var(--#{$prefix}navbar-color-alt);
+  --#{$prefix}nav-link-hover-color: var(--#{$prefix}navbar-hover-color-alt);
+  --#{$prefix}nav-link-disabled-color: var(--#{$prefix}navbar-disabled-color-alt);
+}
+
+//
+// Navbar themes
+//
+
 .navbar-dark {
-  .navbar-brand {
-    color: $navbar-dark-brand-color-alt;
-
-    &:hover,
-    &:focus {
-      color: $navbar-dark-brand-hover-color-alt;
-    }
-  }
-
-  .navbar-nav {
-    .nav-link {
-      color: $navbar-dark-color-alt;
-
-      &:hover,
-      &:focus {
-        color: $navbar-dark-hover-color-alt;
-      }
-
-      &.disabled {
-        color: $navbar-dark-disabled-color-alt;
-      }
-    }
-
-    .show > .nav-link,
-    .nav-link.active {
-      color: $navbar-dark-active-color-alt;
-    }
-  }
-
-  .navbar-toggler {
-    color: $navbar-dark-color-alt;
-    border-color: $navbar-dark-toggler-border-color-alt;
-  }
-
-  .navbar-toggler-icon {
-    background-image: escape-svg($navbar-dark-toggler-icon-bg-alt);
-  }
-
-  .navbar-text {
-    color: $navbar-dark-color-alt;
-    a,
-    a:hover,
-    a:focus {
-      color: $navbar-dark-active-color-alt;
-    }
-  }
+  --#{$prefix}navbar-color: #{$navbar-dark-color-alt};
+  --#{$prefix}navbar-hover-color: #{$navbar-dark-hover-color-alt};
+  --#{$prefix}navbar-disabled-color: #{$navbar-dark-disabled-color-alt};
+  --#{$prefix}navbar-active-color: #{$navbar-dark-active-color-alt};
+  --#{$prefix}navbar-brand-color: #{$navbar-dark-brand-color-alt};
+  --#{$prefix}navbar-brand-hover-color: #{$navbar-dark-brand-hover-color-alt};
+  --#{$prefix}navbar-toggler-border-color: #{$navbar-dark-toggler-border-color-alt};
+  --#{$prefix}navbar-toggler-icon-bg: #{escape-svg($navbar-dark-toggler-icon-bg-alt)};
 }
