--- a/scss/dark/_offcanvas.scss
+++ b/scss/dark/_offcanvas.scss
@@ -1,25 +1,20 @@
-.offcanvas {
-  color: $offcanvas-color-alt;
-  background-color: $offcanvas-bg-color-alt;
-  @include box-shadow($offcanvas-box-shadow-alt);
+
+%offcanvas-css-vars-alt {
+  --#{$prefix}offcanvas-color: #{$offcanvas-color-alt};
+  --#{$prefix}offcanvas-bg: #{$offcanvas-bg-color-alt};
+  --#{$prefix}offcanvas-border-color: #{$offcanvas-border-color-alt};
+  --#{$prefix}offcanvas-box-shadow: #{$offcanvas-box-shadow-alt};
+}
+
+@each $breakpoint in map-keys($grid-breakpoints) {
+  $next: breakpoint-next($breakpoint, $grid-breakpoints);
+  $infix: breakpoint-infix($next, $grid-breakpoints);
+
+  .offcanvas#{$infix} {
+    @extend %offcanvas-css-vars-alt;
+  }
 }
 
 .offcanvas-backdrop {
   @include overlay-backdrop-alt($offcanvas-backdrop-bg-alt, $offcanvas-backdrop-opacity-alt);
-}
-
-.offcanvas-start {
-  border-right: $offcanvas-border-width solid $offcanvas-border-color-alt;
-}
-
-.offcanvas-end {
-  border-left: $offcanvas-border-width solid $offcanvas-border-color-alt;
-}
-
-.offcanvas-top {
-  border-bottom: $offcanvas-border-width solid $offcanvas-border-color-alt;
-}
-
-.offcanvas-bottom {
-  border-top: $offcanvas-border-width solid $offcanvas-border-color-alt;
 }
