--- a/scss/dark/_tables.scss
+++ b/scss/dark/_tables.scss
@@ -3,63 +3,25 @@
 //
 
 .table {
-  --#{$variable-prefix}table-color: #{$table-color-alt};
-  --#{$variable-prefix}table-bg: #{$table-bg-alt};
-  --#{$variable-prefix}table-border-color: #{$table-border-color-alt};
-  --#{$variable-prefix}table-accent-bg: #{$table-accent-bg-alt};
-  --#{$variable-prefix}table-striped-color: #{$table-striped-color-alt};
-  --#{$variable-prefix}table-striped-bg: #{$table-striped-bg-alt};
-  --#{$variable-prefix}table-active-color: #{$table-active-color-alt};
-  --#{$variable-prefix}table-active-bg: #{$table-active-bg-alt};
-  --#{$variable-prefix}table-hover-color: #{$table-hover-color-alt};
-  --#{$variable-prefix}table-hover-bg: #{$table-hover-bg-alt};
-
-  color: $table-color-alt;  // color: var(--#{$variable-prefix}table-color);  // TODO: RE-REGRESS AFTER 5.3.1!!
-  border-color: $table-border-color-alt;  // border-color: var(--#{$variable-prefix}table-border-color);  // TODO: RE-REGRESS AFTER 5.3.1!!
-
-  // DONT NEED TO DARK, CSS VARS TAKES CARE OF THIS.
-  // Target th & td
-  // xstylelint-disable-next-line selector-max-universal
-  // > :not(caption) > * > * {
-  //   background-color: var(--#{$variable-prefix}table-bg);
-  //   box-shadow: inset 0 0 0 9999px var(--#{$variable-prefix}table-accent-bg);
-  // }
+  --#{$prefix}table-color: #{$table-color-alt};
+  --#{$prefix}table-bg: #{$table-bg-alt};
+  --#{$prefix}table-border-color: #{$table-border-color-alt};
+  --#{$prefix}table-accent-bg: #{$table-accent-bg-alt};
+  --#{$prefix}table-striped-color: #{$table-striped-color-alt};
+  --#{$prefix}table-striped-bg: #{$table-striped-bg-alt};
+  --#{$prefix}table-active-color: #{$table-active-color-alt};
+  --#{$prefix}table-active-bg: #{$table-active-bg-alt};
+  --#{$prefix}table-hover-color: #{$table-hover-color-alt};
+  --#{$prefix}table-hover-bg: #{$table-hover-bg-alt};
 }
 
 .table-group-divider {
   border-top: calc(2 * $table-border-width) solid $table-group-separator-color-alt; // stylelint-disable-line function-disallowed-list
 }
 
-// Zebra-striping
-
-// DONT NEED TO DARK, CSS VARS TAKES CARE OF THIS.
-// .table-striped {
-//   > tbody > tr:nth-of-type(#{$table-striped-order}) > * {
-//     --#{$variable-prefix}table-accent-bg: var(--#{$variable-prefix}table-striped-bg);
-//     color: var(--#{$variable-prefix}table-striped-color);
-//   }
-// }
-
-// Active table
-
-// DONT NEED TO DARK, CSS VARS TAKES CARE OF THIS.
-// .table-active {
-//   --#{$variable-prefix}table-accent-bg: var(--#{$variable-prefix}table-active-bg);
-//   color: var(--#{$variable-prefix}table-active-color);
-// }
-
-// Hover effect
-
-// DONT NEED TO DARK, CSS VARS TAKES CARE OF THIS.
-// .table-hover {
-//   > tbody > tr:hover > * {
-//     --#{$variable-prefix}table-accent-bg: var(--#{$variable-prefix}table-hover-bg);
-//     color: var(--#{$variable-prefix}table-hover-color);
-//   }
-// }
-
-
+//
 // Table variants
+//
 
 @each $color, $value in $table-variants-alt {
   @include table-variant-alt($color, $value);
