--- a/scss/dark/mixins/_buttons.scss
+++ b/scss/dark/mixins/_buttons.scss
@@ -1,119 +1,45 @@
 // Button variants
 
 @mixin button-variant-alt(
-  $background,
-  $border,
-  $color: color-contrast($background, $color-contrast-dark-alt, $color-contrast-light-alt, $min-contrast-ratio-alt),
-  $hover-background: if($color == $color-contrast-light-alt, shade-color($background, $btn-hover-bg-shade-amount-alt), tint-color($background, $btn-hover-bg-tint-amount-alt)),
-  $hover-border: if($color == $color-contrast-light-alt, shade-color($border, $btn-hover-border-shade-amount-alt), tint-color($border, $btn-hover-border-tint-amount-alt)),
-  $hover-color: color-contrast($hover-background, $color-contrast-dark-alt, $color-contrast-light-alt, $min-contrast-ratio-alt),
-  $active-background: if($color == $color-contrast-light-alt, shade-color($background, $btn-active-bg-shade-amount-alt), tint-color($background, $btn-active-bg-tint-amount-alt)),
-  $active-border: if($color == $color-contrast-light-alt, shade-color($border, $btn-active-border-shade-amount-alt), tint-color($border, $btn-active-border-tint-amount-alt)),
-  $active-color: color-contrast($active-background, $color-contrast-dark-alt, $color-contrast-light-alt, $min-contrast-ratio-alt),
-  $disabled-background: $background,
-  $disabled-border: $border,
-  $disabled-color: color-contrast($disabled-background, $color-contrast-dark-alt, $color-contrast-light-alt, $min-contrast-ratio-alt),
-  $btn-box-shadow: $btn-box-shadow-alt
+  $background-alt,
+  $border-alt,
+  $color-alt: color-contrast($background-alt, $color-contrast-dark-alt, $color-contrast-light-alt, $min-contrast-ratio-alt),
+  $hover-background-alt: if($color-alt == $color-contrast-light-alt, shade-color($background-alt, $btn-hover-bg-shade-amount-alt), tint-color($background-alt, $btn-hover-bg-tint-amount-alt)),
+  $hover-border-alt: if($color-alt == $color-contrast-light-alt, shade-color($border-alt, $btn-hover-border-shade-amount-alt), tint-color($border-alt, $btn-hover-border-tint-amount-alt)),
+  $hover-color-alt: color-contrast($hover-background-alt, $color-contrast-dark-alt, $color-contrast-light-alt, $min-contrast-ratio-alt),
+  $active-background-alt: if($color-alt == $color-contrast-light-alt, shade-color($background-alt, $btn-active-bg-shade-amount-alt), tint-color($background-alt, $btn-active-bg-tint-amount-alt)),
+  $active-border-alt: if($color-alt == $color-contrast-light-alt, shade-color($border-alt, $btn-active-border-shade-amount-alt), tint-color($border-alt, $btn-active-border-tint-amount-alt)),
+  $active-color-alt: color-contrast($active-background-alt, $color-contrast-dark-alt, $color-contrast-light-alt, $min-contrast-ratio-alt),
+  $disabled-background-alt: $background-alt,
+  $disabled-border-alt: $border-alt,
+  $disabled-color-alt: color-contrast($disabled-background-alt, $color-contrast-dark-alt, $color-contrast-light-alt, $min-contrast-ratio-alt)
 ) {
-  color: $color;
-  @include gradient-bg($background);
-  border-color: $border;
-  @include box-shadow($btn-box-shadow);
-
-  &:hover {
-    color: $hover-color;
-    @include gradient-bg($hover-background);
-    border-color: $hover-border;
-  }
-
-  .btn-check:focus + &,
-  &:focus {
-    color: $hover-color;
-    @include gradient-bg($hover-background);
-    border-color: $hover-border;
-    @if $enable-shadows {
-      @include box-shadow($btn-box-shadow, 0 0 0 $btn-focus-width rgba(mix($color, $border, 15%), .5));
-    } @else {
-      // Avoid using mixin so we can pass custom focus shadow properly
-      box-shadow: 0 0 0 $btn-focus-width rgba(mix($color, $border, 15%), .5);
-    }
-  }
-
-  .btn-check:checked + &,
-  .btn-check:active + &,
-  &:active,
-  &.active,
-  .show > &.dropdown-toggle {
-    color: $active-color;
-    background-color: $active-background;
-    // Remove CSS gradients if they're enabled
-    background-image: if($enable-gradients, none, null);
-    border-color: $active-border;
-
-    &:focus {
-      @if $enable-shadows {
-        @include box-shadow($btn-active-box-shadow, 0 0 0 $btn-focus-width rgba(mix($color, $border, 15%), .5));
-      } @else {
-        // Avoid using mixin so we can pass custom focus shadow properly
-        box-shadow: 0 0 0 $btn-focus-width rgba(mix($color, $border, 15%), .5);
-      }
-    }
-  }
-
-  &:disabled,
-  &.disabled {
-    color: $disabled-color;
-    background-color: $disabled-background;
-    // Remove CSS gradients if they're enabled
-    background-image: if($enable-gradients, none, null);
-    border-color: $disabled-border;
-  }
+  @include button-variant(
+    $background-alt,
+    $border-alt,
+    $color-alt,
+    $hover-background-alt,
+    $hover-border-alt,
+    $hover-color-alt,
+    $active-background-alt,
+    $active-border-alt,
+    $active-color-alt,
+    $disabled-background-alt,
+    $disabled-border-alt,
+    $disabled-color-alt );
 }
 
 @mixin button-outline-variant-alt(
-  $color,
-  $color-hover: color-contrast($color),
-  $active-background: $color,
-  $active-border: $color,
-  $active-color: color-contrast($active-background),
-  $btn-active-box-shadow: $btn-active-box-shadow-alt
+  $color-alt,
+  $color-hover-alt: color-contrast($color-alt),
+  $active-background-alt: $color-alt,
+  $active-border-alt: $color-alt,
+  $active-color-alt: color-contrast($active-background-alt)
 ) {
-  color: $color;
-  border-color: $color;
-
-  &:hover {
-    color: $color-hover;
-    background-color: $active-background;
-    border-color: $active-border;
-  }
-
-  .btn-check:focus + &,
-  &:focus {
-    box-shadow: 0 0 0 $btn-focus-width rgba($color, .5);
-  }
-
-  .btn-check:checked + &,
-  .btn-check:active + &,
-  &:active,
-  &.active,
-  &.dropdown-toggle.show {
-    color: $active-color;
-    background-color: $active-background;
-    border-color: $active-border;
-
-    &:focus {
-      @if $enable-shadows {
-        @include box-shadow($btn-active-box-shadow, 0 0 0 $btn-focus-width rgba($color, .5));
-      } @else {
-        // Avoid using mixin so we can pass custom focus shadow properly
-        box-shadow: 0 0 0 $btn-focus-width rgba($color, .5);
-      }
-    }
-  }
-
-  &:disabled,
-  &.disabled {
-    color: $color;
-    background-color: transparent;
-  }
+  @include button-outline-variant(
+    $color-alt,
+    $color-hover-alt,
+    $active-background-alt,
+    $active-border-alt,
+    $active-color-alt );
 }
