--- a/scss/dark/mixins/_table-variants.scss
+++ b/scss/dark/mixins/_table-variants.scss
@@ -6,17 +6,14 @@
     $active-bg: mix($color, $background, percentage($table-active-bg-factor-alt));
     $border-color: mix($color, $background, percentage($table-border-factor-alt));
 
-    --#{$variable-prefix}table-color: #{$color};
-    --#{$variable-prefix}table-bg: #{$background};
-    --#{$variable-prefix}table-border-color: #{$border-color};
-    --#{$variable-prefix}table-striped-bg: #{$striped-bg};
-    --#{$variable-prefix}table-striped-color: #{color-contrast($striped-bg)};
-    --#{$variable-prefix}table-active-bg: #{$active-bg};
-    --#{$variable-prefix}table-active-color: #{color-contrast($active-bg)};
-    --#{$variable-prefix}table-hover-bg: #{$hover-bg};
-    --#{$variable-prefix}table-hover-color: #{color-contrast($hover-bg)};
-
-    color: $color;  // color: var(--#{$variable-prefix}table-color);  // TODO: RE-REGRESS AFTER 5.3.1!!
-    border-color: mix($color, $background, percentage($table-border-factor-alt));  // border-color: var(--#{$variable-prefix}table-border-color);  // TODO: RE-REGRESS AFTER 5.3.1!!
+    --#{$prefix}table-color: #{$color};
+    --#{$prefix}table-bg: #{$background};
+    --#{$prefix}table-border-color: #{$border-color};
+    --#{$prefix}table-striped-bg: #{$striped-bg};
+    --#{$prefix}table-striped-color: #{color-contrast($striped-bg)};
+    --#{$prefix}table-active-bg: #{$active-bg};
+    --#{$prefix}table-active-color: #{color-contrast($active-bg)};
+    --#{$prefix}table-hover-bg: #{$hover-bg};
+    --#{$prefix}table-hover-color: #{color-contrast($hover-bg)};
   }
 }
