--- a/scss/bootstrap-dark.scss
+++ b/scss/bootstrap-dark.scss
@@ -77,7 +77,7 @@
   @import "dark/dark";
 
   // Layout & components
-  // reboot - all css vars
+  @import "dark/reboot";
   @import "dark/type";
   @import "dark/images";
   // containers - no colors
