--- a/scss/bootstrap-reboot-dark.scss
+++ b/scss/bootstrap-reboot-dark.scss
@@ -24,3 +24,7 @@
 }
 
 @import "reboot";
+@include color-scheme-alt(alternative-color-scheme($default-color-scheme)) {
+  @import "dark/dark";
+  @import "dark/reboot";
+}
