update ignores + fix $text-muted-alt error

--- a/scss/_variables-alt.scss
+++ b/scss/_variables-alt.scss
@@ -369,7 +369,7 @@ $component-active-bg-alt:         $primary-alt !default;
 
 $headings-color-alt:              null !default;
 
-$text-muted-alt:                  rgba($body-color-rgb, .75) !default;
+$text-muted-alt:                  rgba($body-color-alt, .75) !default;
 
 $blockquote-footer-color-alt:     $gray-600-alt !default;
 
