--- a/scss/dark/_placeholders.scss
+++ b/scss/dark/_placeholders.scss
@@ -3,11 +3,12 @@
   opacity: $placeholder-opacity-max-alt;
 }
 
-@keyframes placeholder-glow {
-  50% {
-    opacity: $placeholder-opacity-min-alt;
-  }
-}
+//* @keyframes is prob. not supported in most dark-mode implementations *//
+// @keyframes placeholder-glow {
+//   50% {
+//     opacity: $placeholder-opacity-min-alt;
+//   }
+// }
 
 .placeholder-wave {
   mask-image: linear-gradient(130deg, $white-alt 55%, rgba(255, 255, 255, (1 - $placeholder-opacity-min-alt)) 75%, $white-alt 95%);
